--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.4",
     "node": "^16.14.0",
     "nodemailer": "^6.7.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "razorpay": "^2.8.1"
   },
   "repository": {
     "type": "git",
