--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "module": "^1.2.5",
     "modules": "^0.4.0",
+    "moment": "^2.29.3",
     "mongoose": "^6.1.8",
     "multer": "^1.4.4",
     "node": "^16.14.0",
